--- a/android/Example/packages.config
+++ b/android/Example/packages.config
@@ -1,24 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Annotations" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Compat" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Core.UI" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Fragment" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Android.Support.v4" version="28.0.0.1" targetFramework="monoandroid81" requireReinstallation="true" />
-  <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="monoandroid81" />
-  <package id="Xamarin.Firebase.Analytics" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Firebase.Analytics.Impl" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Firebase.Common" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.Firebase.Iid" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.GooglePlayServices.Analytics" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.GooglePlayServices.Analytics.Impl" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.GooglePlayServices.Base" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.GooglePlayServices.TagManager.V4.Impl" version="60.1142.1" targetFramework="monoandroid81" />
-  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Annotations" version="28.0.0.3" targetFramework="monoandroid90" />
 </packages>
