--- a/android/Test/TestLib/TestLib.csproj
+++ b/android/Test/TestLib/TestLib.csproj
@@ -54,8 +54,9 @@
     <TransformFile Include="Transforms\Metadata.xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedReferenceJar Include="Jars\gson-2.8.1.jar" />
-    <EmbeddedReferenceJar Include="Jars\Java-WebSocket-1.3.9.jar" />
+    <EmbeddedReferenceJar Include="Jars\gson-2.8.6.jar" />
+    <EmbeddedReferenceJar Include="Jars\Java-WebSocket-1.4.0.jar" />
+    <EmbeddedReferenceJar Include="Jars\slf4j-api-1.7.30.jar" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedJar Include="Jars\adjust-test.jar" />
